align fix

--- a/app/assets/stylesheets/views/home.scss
+++ b/app/assets/stylesheets/views/home.scss
@@ -43,6 +43,7 @@ header {
   padding-left: 140px;
   margin-top: 35px;
   overflow: hidden;
+  width: 460px;
   @media screen and (max-width: $break-tablet) {
     float: right;
     padding-left: 0;
@@ -286,4 +287,12 @@ div.tooltip {
 .end-msg {
   color: #fff;
   font-size: 1.1em;
+  position: relative;
+  a {
+    color: #ef791a;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
